--- a/app/globals.css
+++ b/app/globals.css
@@ -1,36 +1,38 @@
 * {
-    margin: 0;
-    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --color-bg: #2C2C32;
+    --color-active: #0f7dc6;
 }
 
 body {
-    height: 100vh;
-    position: relative;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 header {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-
-    padding: 20px 0;
+    background-color: var(--color-bg);
+    padding: 2rem 0;
+    text-align: center;
+}
+header > a {
     color: white;
-    background: black;
-
-    a {
-        color: white;
-        text-decoration: none;
-
-        &:hover {
-            text-decoration: underline;
-        }
-    }
+    text-decoration: none;
+    padding: 0 1rem;
+}
+header > a:hover {
+    text-decoration: underline;
 }
 
-footer {
-    position: fixed;
-    bottom: 0;
+h1 {
+    text-align: center;
+    margin-top: 0;
 }
 
 .container {
@@ -40,10 +42,52 @@ footer {
     margin: 0 auto;
 }
 
-h1 {
-    text-align: center;
+main {
+    min-height: calc(100vh - 85px - 22px);
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+main a {
+    text-decoration: none;
+    color: var(--color-bg);
+}
+main a:hover {
+    text-decoration: underline;
 }
 
 .active {
-    color: aqua;
+    color: var(--color-active);
+    cursor: default;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+}
+
+form button, button {
+    background-color: var(--color-active);
+    cursor: pointer;
+    color: white;
+    border: none;
+}
+
+input[type="search"] {
+    padding: 0.5rem 1rem;
+}
+
+button {
+    padding: 0.5rem 1rem;
+}
+
+.stack {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+.login-form {
+    display: grid;
+    gap: 1rem;
 }
